@@ -48,7 +48,7 @@ MHD_connection_get_fdset (struct MHD_Connection *connection,
 int MHD_connection_get_pollfd(struct MHD_Connection *connection,
                               struct MHD_Pollfd *p);
 
-void MHD_set_http_calbacks (struct MHD_Connection *connection);
+void MHD_set_http_callbacks_ (struct MHD_Connection *connection);
 
 int MHD_connection_handle_read (struct MHD_Connection *connection);
 
